fixing background not showing by using parcel new URL for files

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,6 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  background: url("/PPT_offline/fondo.svg") no-repeat;
-  background-size: cover;
   font-family: "Odibee Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
